# f-t

./: CHANGELOG.md  CHANGES.md  LICENSE  README.md  components.d.ts  index.html  install.json  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml  test-build.yml  test.yml  updater.yaml
scripts/: updatelog.mjs  updater.mjs
src/: App.vue  main.ts
src-tauri/: .taurignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs  setup.rs  tray.rs
src/apis/: xiaoniu.ts  youdao.ts
src/assets/: main.postcss
src/router/: index.ts
src/utils/: fs.ts  math.ts  request.ts  shortcut.ts  startup.ts  window.ts
src/views/: Index.vue  Setting.vue
src/views/Setting/: About.vue  Changelog.vue  ThirdPartyConfig.vue
