[package]
name = "f-t"
version = "23.2.26"
description = "A Tauri App"
authors = ["lly ke"]
license = "MIT"
repository = "https://github.com/lly-ke/f-t"
default-run = "f-t"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0.91"
serde = { version = "1.0.152", features = ["derive"] }
tauri = { version = "1.2.3", features = ["api-all", "macos-private-api", "system-tray", "updater"] }
window-vibrancy = "0.3.2"
log = "0.4.17"
env_logger = "0.10.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
